force-app/main/default/objects/Torc_User_Skill__c/Torc_User_Skill__c.object-meta.xml
<CustomObject>
    <label>Torc User Skill</label>
    <nameField>
        <displayFormat>TUS-{00000}</displayFormat>
        <label>Torc User Skill Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Torc User Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>