force-app/main/default/objects/Torc_User_Skill__c/fields/experience__c.field-meta.xml
<CustomField>
    <fullName>experience__c</fullName>
    <label>Experience</label>
    <length>40</length>
    <type>Text</type>
</CustomField>