force-app/main/default/objects/Torc_User_Skill__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <formula>IF(experience__c =&apos;high&apos;,3,
IF(experience__c =&apos;medium&apos;,2,
IF(experience__c =&apos;low&apos;,1,0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>