force-app/main/default/objects/Torc_User_Skill__c/fields/Skil_Name__c.field-meta.xml
<CustomField>
    <fullName>Skil_Name__c</fullName>
    <label>Skil Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>