force-app/main/default/objects/Torc_User_Skill__c/fields/Skil_Name_For__c.field-meta.xml
<CustomField>
    <fullName>Skil_Name_For__c</fullName>
    <formula>Torc_Skill__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Skil Name(For)</label>
    <type>Text</type>
</CustomField>