force-app/main/default/objects/Torc_User_Skill__c/fields/Skill_with_Exp__c.field-meta.xml
<CustomField>
    <fullName>Skill_with_Exp__c</fullName>
    <formula>Torc_Skill__r.Name + &apos;:&apos; + experience__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Skill with Exp</label>
    <type>Text</type>
</CustomField>