force-app/main/default/objects/Torc_User_Skill__c/fields/Torc_Skill__c.field-meta.xml
<CustomField>
    <fullName>Torc_Skill__c</fullName>
    <label>Torc Skill</label>
    <referenceTo>Torc_Skill__c</referenceTo>
    <relationshipLabel>Torc User Skills</relationshipLabel>
    <relationshipName>Torc_User_Skills</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>